<resources>
    <string name="app_name">Calculo do IMC</string>
    <string name="peso_kg">Peso (KG):</string>
    <string name="exemplo_peso">Ex.: 75.3</string>
    <string name="altura_m">Altura (M):</string>
    <string name="exemplo_altura">Ex.: 1.70</string>
    <string name="botao_calcular_imc">Calcular IMC</string>
    <string name="abaixo_do_peso">abaixo do peso</string>
    <string name="peso_normal">peso normal</string>
    <string name="sobrepeso">sobrepeso</string>
    <string name="obesidade_grau_1">obesidade grau 1</string>
    <string name="obesidade_grau_2">obesidade grau 2</string>
    <string name="obesidade_grau_3">obesidade grau 3</string>
    <string name="resultado_abaixo_do_peso">Estar abaixo do peso é uma condição em que a pessoa pesa menos do que é considerado adequado para aquela altura, idade e sexo. Uma pessoa nestas condições pode estar com alguma doença que a está emagrecendo ou sua nutrição não está boa o suficiente. Normalmente estas pessoas podem ter deficiências de nutrientes como vitaminas, sais minerais, proteínas, gorduras ou sob o risco de estar com anorexia.</string>
    <string name="resultado_peso_normal">Estar dentro da faixa de peso normal é significa ter um peso considerado adequado para sua altura, idade e sexo, de acordo com as faixas do IMC - momento de fazer a manutenção do peso Para manter o peso é importante manter uma dieta balanceada (não basta alimentos corretos, mas também quantidades corretas) para seu organismo. Devem ser avaliados peso, idade, composição corporal, presença de doenças e/ou comorbidades.</string>
    <string name="resultado_sobrepeso">O sobrepeso é uma condição em que a pessoa pesa mais do que é considerado adequado para aquela altura, idade e sexo. O sedentarismo e os maus hábitos alimentares levam ao aumento dessa parcela de indivíduos com sobrepeso a cada ano. Essa faixa, se analisada junto com outras medidas e índices, pode demonstrar um risco maior de doenças como diabetes tipo 2, dislipidemia (com colesterol HDL baixo e triglicérides altos), ácido úrico aumentado, hipertensão, entre outras.</string>
    <string name="resultado_obesidade_grau_1">O tratamento é realizado através de dieta apropriada com avaliação médica em conjunto com a prática de exercícios, desde que o paciente seja avaliado e liberado pelo médico. Além disso, é preciso que o paciente realize as atividades com o acompanhamento de um profissional de educação física. Em alguns casos avaliados pelo médico, pode-se fazer o uso de remédios para emagrecer para ajudar no controle do peso.</string>
    <string name="resultado_obesidade_grau_2">Os riscos associados à obesidade de grau II são mais acentuados. Entre eles, estão a esteatose hepática, doenças articulares, hipertensão, diabetes mellitus, síndrome metabólica, cânceres, infarto agudo do miocárdio e acidente vascular cerebral, lembrando que estes dois últimos são as principais causas de morte no Brasil e no mundo.</string>
    <string name="resultado_obesidade_grau_3">Entre as patologias associadas à obesidade grau 3, estão os distúrbios hormonais, cardiopatias, morte súbita, dermatites, osteoporose, hipertensão, hepatopatias e insuficiência venosa. Porém, segundo a Organização Mundial de Saúde (OMS), a obesidade de grau III é a principal causa de morte evitável do mundo.</string>
</resources>
