<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textview_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/peso_kg"
        android:textColor="#000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edittext_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_peso"
        android:hint="@string/exemplo_peso"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#01579B"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_peso"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/altura_m"
        android:textColor="#000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edittext_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_altura"
        android:hint="@string/exemplo_altura"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#01579B"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_calcular_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/botao_calcular_imc" />


</RelativeLayout>